tests/aster/x/mochi/rosetta/dynamic-variable-names.error
error[A024]: unknown function input
  --> /workspace/mochi/tests/rosetta/x/Mochi/dynamic-variable-names.mochi:36:16

 36 |     let line = input()
    |                ^

help:
  Declare input before use
